syntax = "proto3";
package hackatomopctchain.badge;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "badge/params.proto";
import "badge/badge_info.proto";
// this line is used by starport scaffolding # 1

option go_package = "hackatom-opct-chain/x/badge/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/hackatom-opct-chain/badge/params";
  }
  // Queries a BadgeInfo by index.
	rpc BadgeInfo(QueryGetBadgeInfoRequest) returns (QueryGetBadgeInfoResponse) {
		option (google.api.http).get = "/hackatom-opct-chain/badge/badge_info/{index}";
	}

	// Queries a list of BadgeInfo items.
	rpc BadgeInfoAll(QueryAllBadgeInfoRequest) returns (QueryAllBadgeInfoResponse) {
		option (google.api.http).get = "/hackatom-opct-chain/badge/badge_info";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetBadgeInfoRequest {
	  string index = 1;

}

message QueryGetBadgeInfoResponse {
	BadgeInfo badgeInfo = 1 [(gogoproto.nullable) = false];
}

message QueryAllBadgeInfoRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBadgeInfoResponse {
	repeated BadgeInfo badgeInfo = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
